<resources>
    <string name="app_name">Bullrun</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Bullrun">Bullrun</string>
    <string name="Search">Search</string>
    <string name="coin_logo">Coin Logo</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="buying_price">Buying Price...</string>
    <string name="buying_amount">Buying Amount</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="_0_00">0.00</string>
    <string name="price">Price :</string>
    <string name="amount">Amount :</string>
    <string name="currently_holding">Currently Holding :</string>
    <string name="portfolio">Portfolio</string>
    <string name="assets_overview">Assets Overview</string>
    <string name="today">Today</string>
    <string name="crypto_assets">Crypto Assets</string>
    <string name="my_watchlist">My Watchlist</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="_10">#10</string>
    <string name="_9">#9</string>
    <string name="_8">#8</string>
    <string name="_7">#7</string>
    <string name="_6">#6</string>
    <string name="_4">#4</string>
    <string name="_3">#3</string>
    <string name="_2">#2</string>
    <string name="_1">#1</string>
    <string name="total_balance">Total Balance</string>
    <string name="wallets">Wallets</string>
    <string name="add_new_wallet">Add New Wallet</string>
    <string name="assets">Assets</string>
    <string name="total_selling_vol">Total Selling Vol.</string>
    <string name="avg_entry">Avg. Entry</string>
    <string name="pnl">Pnl</string>
    <string name="statistics">Statistics</string>
    <string name="overview">Overview</string>
    <string name="_24h">24H</string>
    <string name="_1m">1M</string>
    <string name="_3m">3M</string>
    <string name="all">All</string>
    <string name="_1w">1W</string>
    <string name="_1d">1D</string>
    <string name="top_gainers">Top Gainers</string>
    <string name="based_on_top_250_coins">Based on top 250 coins</string>
    <string name="trending">Trending</string>
    <string name="top_losers">Top Losers</string>
    <string name="all_time_high">All Time High</string>
    <string name="see_more">See more</string>
    <string name="usd">USD</string>
    <string name="new_transaction">New Transaction</string>
    <string name="transaction">Transaction</string>
    <string name="convert">Convert</string>
    <string name="community">Community</string>
    <string name="last_24h">Last 24H</string>
</resources>