<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="coin"
            type="drewcarlson.coingecko.models.coins.CoinFullData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/edt_buying_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:autofillHints="@string/buying_price"
            android:ems="10"
            android:inputType="textPersonName"
            android:text='@{String.valueOf(coin.marketData.currentPrice.get("usd"))}'
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            tools:text="54981" />

        <EditText
            android:id="@+id/edt_buying_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/buying_amount"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/_0_00"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/edt_buying_price"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <EditText
            android:id="@+id/edt_wallet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/buying_amount"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:inputType="textPersonName"
            android:text="@string/_0_00"
            app:layout_constraintStart_toStartOf="@+id/edt_buying_amount"
            app:layout_constraintTop_toBottomOf="@+id/edt_buying_amount" />

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/buy"
            android:backgroundTint="#0AC58F"
            app:layout_constraintStart_toStartOf="@+id/edt_wallet_name"
            app:layout_constraintTop_toBottomOf="@+id/edt_wallet_name"
            />

        <Button
            android:id="@+id/btn_sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/sell"
            android:backgroundTint="#D50000"
            app:layout_constraintBottom_toBottomOf="@+id/btn_buy"
            app:layout_constraintStart_toEndOf="@+id/btn_buy"
            app:layout_constraintTop_toTopOf="@+id/btn_buy" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/coin_logo"
            imageUrl="@{coin.image.large}"
            context="@{context}"/>

        <TextView
            android:id="@+id/txt_symbol_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            tools:text="BTC"
            android:text="@{coin.symbol}"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/txt_name_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            tools:text="Bitcoin"
            android:text="@{coin.name}"
            app:layout_constraintBottom_toBottomOf="@+id/txt_symbol_transaction"
            app:layout_constraintStart_toEndOf="@+id/txt_symbol_transaction"
            app:layout_constraintTop_toTopOf="@+id/txt_symbol_transaction" />

        <TextView
            android:id="@+id/txt_price_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/txt_name_transaction"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            tools:text="54981$"
            android:text='@{String.valueOf(coin.marketData.currentPrice.get("usd"))+" $"}'/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:text="@string/amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/currently_holding"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/btn_buy" />

        <TextView
            android:id="@+id/txt_current_amount_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            tools:text="2.3458 BTC"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>