<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bg_layout2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/primary"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/shape_circular_divider"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSell"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="12dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/sell"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:cornerRadius="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/divider"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="@color/gray_800" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBuy"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="36dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/buy"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:cornerRadius="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/divider"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="@color/gray_800" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStatistics"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:text="@string/statistics"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:cornerRadius="16dp"
                app:rippleColor="@color/gray_800"
                app:strokeColor="@color/white"
                app:strokeWidth="1.5dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="64dp"
            android:background="@drawable/shape_bg_bottom_sheet_bottom"
            android:paddingBottom="16dp">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar_layout"
                android:layout_width="match_parent"
                android:layout_height="372dp"
                android:background="@color/white"
                android:elevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/motion_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="64dp"
                    app:layoutDescription="@xml/portfo_fragment"
                    app:layout_scrollFlags="snap|scroll|exitUntilCollapsed">

                    <TextView
                        android:id="@+id/txtOverview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/overview"
                        android:textColor="@color/black_100"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/txtWalletBalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="$ 16 942.24"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        app:layout_constraintStart_toStartOf="@id/txtOverview"
                        app:layout_constraintTop_toBottomOf="@+id/txtOverview" />

                    <TextView
                        android:id="@+id/txtWalletBTCValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="0.273561 BTC"
                        android:textColor="@color/gray_700"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="@id/txtWalletBalance"
                        app:layout_constraintTop_toBottomOf="@+id/txtWalletBalance" />

                    <TextView
                        android:id="@+id/txtChange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:text="+34.63 %"
                        android:textColor="@color/green"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/txtWalletBalance"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/txtWalletBalance" />

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/line_chart"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="32dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="0dp"
                        app:layout_constraintBottom_toTopOf="@id/toggle_group"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtWalletBalance" />

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/toggle_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:singleSelection="true"
                        app:selectionRequired="true">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_1d"
                            style="@style/timeFrameSelectionToggleButton"
                            android:layout_width="36dp"
                            android:layout_height="wrap_content"
                            android:text="@string/_1d"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_1w"
                            style="@style/timeFrameSelectionToggleButton"
                            android:layout_width="36dp"
                            android:layout_height="wrap_content"
                            android:text="@string/_1w" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_1m"
                            style="@style/timeFrameSelectionToggleButton"
                            android:layout_width="36dp"
                            android:layout_height="wrap_content"
                            android:text="@string/_1m" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_3m"
                            style="@style/timeFrameSelectionToggleButton"
                            android:layout_width="36dp"
                            android:layout_height="wrap_content"
                            android:text="@string/_3m" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_all"
                            style="@style/timeFrameSelectionToggleButton"
                            android:layout_width="36dp"
                            android:layout_height="wrap_content"
                            android:text="@string/all" />
                    </com.google.android.material.button.MaterialButtonToggleGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/assets"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_assets"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="16dp"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal"
                        android:overScrollMode="never"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView13" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>