<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="322dp">

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/motion_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="100dp"
                app:layoutDescription="@xml/portfo_fragment"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/assets_overview"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_charts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBaseline_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:srcCompat="@drawable/bar_chart"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/txt_balance_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="54dp"
                    android:gravity="center_vertical|start"
                    android:text="14572.91 $"
                    android:textSize="38sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/txt_title"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title" />

                <TextView
                    android:id="@+id/txt_balance_vol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="0dp"
                    android:text="0.307243 BTC"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/txt_balance_value"
                    app:layout_constraintTop_toBottomOf="@+id/txt_balance_value" />

                <TextView
                    android:id="@+id/txt_today_pnl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="48dp"
                    android:text="112.24 $"
                    android:textColor="@color/green_light"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/txt_balance_value"
                    app:layout_constraintTop_toBottomOf="@+id/txt_balance_vol" />

                <Button
                    android:id="@+id/btn_today_report"
                    android:layout_width="64dp"
                    android:layout_height="42dp"
                    android:layout_marginEnd="16dp"
                    android:padding="5dp"
                    android:text="@string/today"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_today_pnl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txt_today_pnl" />

                <Button
                    android:id="@+id/btn_add_transaction_portfolio"
                    style="@style/Button"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/add_transaction"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:icon="@drawable/add"
                    app:iconGravity="end"
                    app:iconTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_today_pnl" />
            </androidx.constraintlayout.motion.widget.MotionLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_assets"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-300dp" />
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>